--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 #H2
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+#JPA
 spring.jpa.show-sql=true
+#mysql
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/springit?useSSL=false
+spring.datasource.name=springit
+spring.datasource.username=root
+spring.datasource.password=iwiu6uaUF.
